# llm-zoomcamp

./: .gitignore  pyproject.toml
01.intro/: check_openai.ipynb  rag.ipynb  sqlite-ingest.ipynb
02.vector/: Makefile  download.py  embedder.py  rag_helper.py
04.search.evaluation/: 04_search_evaluation_01.ipynb  04_search_evaluation_02.ipynb  Makefile  app.py
04.search.evaluation/data/: agent-answers.csv  agent-evaluations.csv  ground-truth-data.csv  rag-answers-new.csv  rag-answers.csv  rag-evaluations-new.csv  rag-evaluations.csv
05.monitoring/: Makefile  app.py  assistant.py  dashboard.py  db_init.py  db_query.py  docker-compose.yml  generate_data.py  judge.py  metrics.py  pyproject.toml
homeworks/01.agentic.rag/: app.py  rag.py  repository.py  search_engine.py
homeworks/02.vector.search/: app.py  documents.json
homeworks/03.orchestration/: Makefile  docker-compose.yml
homeworks/04.search.evaluation/: homework.ipynb  ingest.py
homeworks/05.monitoring/: Makefile  app.py  sqlite_to_pandas.py  starter.py  telemetry.py
